<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".emotionregulation.EmotionUpdater">

    <TextView
        android:id="@+id/emotionUpdater_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotionUpdater_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/emotionUpdater_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/emotionUpdater_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_title" />

    <TextView
        android:id="@+id/emotionUpdater_valence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/valence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_instruction" />

    <TextView
        android:id="@+id/emotionUpdater_arousal"
        android:layout_width="277dp"
        android:layout_height="15dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/arousal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_valenceLevel" />

    <Button
        android:id="@+id/emotionUpdater_nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_emotion" />

    <SeekBar
        android:id="@+id/emotionUpdater_valenceLevel"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="80"
        android:progress="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_valence" />

    <SeekBar
        android:id="@+id/emotionUpdater_arousalLevel"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="80"
        android:progress="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_arousal" />

    <TextView
        android:id="@+id/emotionUpdater_emotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/emotionEditor_calm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionUpdater_arousalLevel" />
</androidx.constraintlayout.widget.ConstraintLayout>